--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <!-- feature start -->
 
-        <section class="container feature-container">
+        <section class="container bg-1">
             <div class="feature d-flex">
                 <div class="half-width">
                     <h2>Conmebol Copa America 2021</h2>
@@ -34,7 +34,7 @@
 
             <!-- Players Info Start-->
 
-        <section class="container players-container">
+        <section class="container">
             <div class="all-players">
                 <div class="players">
                     <div class="player">
@@ -107,7 +107,7 @@
 
 
             <!-- Teams Start -->
-        <section class="container teams-container">
+        <section class="container bg-2">
             <div class="all-teams">
                 
                 <h2>TEAMS</h2>
@@ -161,7 +161,7 @@
 
             <!-- Match Highlights Start -->
 
-        <section class="container highlighst-container">
+        <section class="container">
             <div class="highlights ">
                 <div class="highlight d-flex">
                     <div class="half-width highlight-details">
@@ -181,9 +181,9 @@
 
             <!-- Sponsors Start -->
 
-        <section class="container sponsors-container" >
+        <section class="container bg-2" >
             <div class="sponsors">
-                <h2>Sponsors</h2>
+                <h2 class="text-underline">Sponsors</h2>
                 <div class="sponsor d-flex">
                     <img src="img/sponsor/1.webp" alt="">
                     <img src="img/sponsor/2.webp" alt="">
@@ -199,9 +199,9 @@
 
             <!-- Sponsors End -->
             <!-- Contact Us Start -->
-        <section class="container contact-us-container">
+        <section class="container">
             <div class="contact-us">
-                <h2 class="">Contact Us</h2>
+                <h2 class="text-underline">Contact Us</h2>
                 <div>
                     <form style="text-align: center;" action="">
                         <ul style="list-style-type:none;">
