--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="feature d-flex">
                 <div class="half-width">
                     <h2>Conmebol Copa America 2021</h2>
-                    <a class="btn" href="#">Watch Live <i class="fas fa-arrow-right"></i></a>
+                    <a class="btn" href="https://www.linkedin.com/in/nepolionchakma/">Watch Live <i class="fas fa-arrow-right"></i></a>
                 </div>
                 <div class="half-width feature-img">
                     <img src="img/banner.png" alt="">
@@ -167,7 +167,7 @@
                     <div class="half-width highlight-details">
                         <h2>Highlight Copa America Final 2021</h2>
                         <p>The 2021 Copa América was the 47th edition of the Copa América, the international men's football championship organised by South America's football ruling body CONMEBOL. The tournament took place in Brazil from 13 June to 10 July 2021.</p>
-                        <a class="btn" href="#">Watch Live <i class="fas fa-arrow-right"></i></a>
+                        <a class="btn" href="https://www.linkedin.com/in/nepolionchakma/">Watch Live <i class="fas fa-arrow-right"></i></a>
                     </div>
                     <div class="half-width feature-img">
                         <iframe src="https://www.youtube.com/embed/6tLxv5EsszA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
